objects/Product2__x.object
<CustomObject>
    <fields>
        <fullName>Regions_c__c</fullName>
        <externalDeveloperName>Regions__c</externalDeveloperName>
        <label>Regions</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ASPAC</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReplacedBy_c__c</fullName>
        <externalDeveloperName>ReplacedBy__c</externalDeveloperName>
        <label>Replaced By</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueInstallmentPeriod__c</fullName>
        <externalDeveloperName>RevenueInstallmentPeriod</externalDeveloperName>
        <label>Revenue Installment Period</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevenueScheduleType__c</fullName>
        <externalDeveloperName>RevenueScheduleType</externalDeveloperName>
        <label>Revenue Schedule Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divide</fullName>
                    <label>Divide Amount into multiple installments</label>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                    <label>Repeat Amount for each installment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoHS_c__c</fullName>
        <externalDeveloperName>RoHS__c</externalDeveloperName>
        <label>RoHS</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Not Relevant</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Not Compliant</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Compliant</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Compliant with Exclusion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoHS_compliant_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RoHS_compliant__c</externalDeveloperName>
        <label>RoHS compliant</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_IsActive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SAP_IsActive__c</externalDeveloperName>
        <inlineHelpText>Is the product active in SAP?</inlineHelpText>
        <label>Is Active in SAP</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code_c__c</fullName>
        <externalDeveloperName>SAP_Product_Code__c</externalDeveloperName>
        <label>SAP Product Code</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBS_Code_c__c</fullName>
        <externalDeveloperName>SBS_Code__c</externalDeveloperName>
        <label>SBS (Code)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBS_Line_Code_c__c</fullName>
        <externalDeveloperName>SBS_Line_Code__c</externalDeveloperName>
        <label>SBS Line (Code)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBS_Line_c__c</fullName>
        <externalDeveloperName>SBS_Line__c</externalDeveloperName>
        <label>SBS Line</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A01</fullName>
                    <label>A01 - Dehydrated media</label>
                </value>
                <value>
                    <fullName>A02</fullName>
                    <label>A02 - Prepared plate media</label>
                </value>
                <value>
                    <fullName>A03</fullName>
                    <label>A03 - Tubes and Bottles</label>
                </value>
                <value>
                    <fullName>A04</fullName>
                    <label>A04 - Ancillary Products</label>
                </value>
                <value>
                    <fullName>A06</fullName>
                    <label>A06 - Environment Control</label>
                </value>
                <value>
                    <fullName>A07</fullName>
                    <label>A07 - Quality control</label>
                </value>
                <value>
                    <fullName>A90</fullName>
                    <label>A90 - Trading Products</label>
                </value>
                <value>
                    <fullName>A99</fullName>
                    <label>A99 - Non Stat</label>
                </value>
                <value>
                    <fullName>B10</fullName>
                    <label>B10 - Automated : VITEK system</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <label>B11 - Semi-automated : ATB system</label>
                </value>
                <value>
                    <fullName>B39</fullName>
                    <label>B39 - MASS SPECTROMETRY</label>
                </value>
                <value>
                    <fullName>B99</fullName>
                    <label>B99 - Non Stat</label>
                </value>
                <value>
                    <fullName>C01</fullName>
                    <label>C01 - API</label>
                </value>
                <value>
                    <fullName>C02</fullName>
                    <label>C02 - Rapid Testing</label>
                </value>
                <value>
                    <fullName>C03</fullName>
                    <label>C03 - Other Products</label>
                </value>
                <value>
                    <fullName>C04</fullName>
                    <label>C04 - Etest - Manual AST</label>
                </value>
                <value>
                    <fullName>C11</fullName>
                    <label>C11 - ID/AST Semi-automated : ATB system</label>
                </value>
                <value>
                    <fullName>C99</fullName>
                    <label>C99 - Non Stat</label>
                </value>
                <value>
                    <fullName>D12</fullName>
                    <label>D12 - BC Manual &amp; VITAL system</label>
                </value>
                <value>
                    <fullName>D29</fullName>
                    <label>D29 - Bac-T-Alert system</label>
                </value>
                <value>
                    <fullName>D99</fullName>
                    <label>D99 - Non Stat</label>
                </value>
                <value>
                    <fullName>E25</fullName>
                    <label>E25 - Lab Informatics</label>
                </value>
                <value>
                    <fullName>E34</fullName>
                    <label>E34 - PREVI ISOLA</label>
                </value>
                <value>
                    <fullName>E35</fullName>
                    <label>E35 - Urinary Screening</label>
                </value>
                <value>
                    <fullName>E36</fullName>
                    <label>E36 - PREVI Color</label>
                </value>
                <value>
                    <fullName>E43</fullName>
                    <label>E43 - Blue line</label>
                </value>
                <value>
                    <fullName>E49</fullName>
                    <label>E49 - WASP &amp; WASP LAB</label>
                </value>
                <value>
                    <fullName>E53</fullName>
                    <label>E53 - EviSight</label>
                </value>
                <value>
                    <fullName>E57</fullName>
                    <label>E57 - COLIBRI</label>
                </value>
                <value>
                    <fullName>E90</fullName>
                    <label>E90 - Trading Products</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpanishLocalName_c__c</fullName>
        <externalDeveloperName>SpanishLocalName__c</externalDeveloperName>
        <label>Spanish Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <externalDeveloperName>StockKeepingUnit</externalDeveloperName>
        <label>Product SKU</label>
        <length>180</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiaries_c__c</fullName>
        <externalDeveloperName>Subsidiaries__c</externalDeveloperName>
        <label>Restricted to Subsidiaries</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>034</fullName>
                </value>
                <value>
                    <fullName>035</fullName>
                </value>
                <value>
                    <fullName>037</fullName>
                </value>
                <value>
                    <fullName>041</fullName>
                </value>
                <value>
                    <fullName>042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportedUnitMesure_c__c</fullName>
        <externalDeveloperName>SupportedUnitMesure__c</externalDeveloperName>
        <label>Supported Unit of Mesure</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>APG</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>BAG</fullName>
                </value>
                <value>
                    <fullName>BCB</fullName>
                </value>
                <value>
                    <fullName>BIN</fullName>
                </value>
                <value>
                    <fullName>BLI</fullName>
                </value>
                <value>
                    <fullName>BNT</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>BTB</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>BTV</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CMT</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CTT</fullName>
                </value>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>D8</fullName>
                </value>
                <value>
                    <fullName>DAY</fullName>
                </value>
                <value>
                    <fullName>DLC</fullName>
                </value>
                <value>
                    <fullName>DLT</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>ETB</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>ETS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Configuration_c__c</fullName>
        <externalDeveloperName>System_Configuration__c</externalDeveloperName>
        <label>System Configuration</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Type_c__c</fullName>
        <externalDeveloperName>System_Type__c</externalDeveloperName>
        <label>System Type</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThaiLocalName_c__c</fullName>
        <externalDeveloperName>ThaiLocalName__c</externalDeveloperName>
        <label>Thai Local Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Service_c__c</fullName>
        <externalDeveloperName>Training_Service__c</externalDeveloperName>
        <label>Training/Service</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_c__c</fullName>
        <externalDeveloperName>Type__c</externalDeveloperName>
        <label>Material Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YCFG</fullName>
                    <label>bMx-Configurable matls.</label>
                </value>
                <value>
                    <fullName>YFIN</fullName>
                    <label>bMx-Finished goods</label>
                </value>
                <value>
                    <fullName>YSPA</fullName>
                    <label>bMx-Spare parts</label>
                </value>
                <value>
                    <fullName>YSRV</fullName>
                    <label>bMx-Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDI_Code_c__c</fullName>
        <externalDeveloperName>UDI_Code__c</externalDeveloperName>
        <label>UDI-DI Code</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_c__c</fullName>
        <externalDeveloperName>Unit_of_Measure__c</externalDeveloperName>
        <label>Unit of Measure</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderEntitlement_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>WorkOrderEntitlement__c</externalDeveloperName>
        <inlineHelpText>Determines whether this product (in the context of a Service Contract) should generate a Work Order Entitlement.</inlineHelpText>
        <label>Generate Work Order Entitlement</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>szTextField_c__c</fullName>
        <externalDeveloperName>szTextField__c</externalDeveloperName>
        <label>szTextField</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Product2</externalName>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>